--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Pacifico&display=swap');
+
 *,
 *::before,
 *::after,
@@ -11,9 +13,33 @@ html {
 body {
     height: 100vh;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    font-family: Nunito, 'sans-serif';
+}
+
+.header {
+    width: 100%;
+    border-bottom: 2px solid #000;
+}
+
+.game-board {
+
+}
+
+.deck {
+
+}
+
+.card {
+
 }
 
 .card img {
     max-width: 50px;
     max-height: 50px;
+}
+
+.footer {
+
 }
