--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,9 @@ html {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow-y: auto;
+    overflow-x: hidden;
+    font-family: Nunito, 'sans-serif';
 }
 
 body {
@@ -15,31 +18,119 @@ body {
     width: 100vw;
     display: flex;
     flex-direction: column;
-    font-family: Nunito, 'sans-serif';
+}
+
+.game-board{
+    width: 100vw;
+    height: 100vh;
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
     width: 100%;
+    max-height: 10%;
     border-bottom: 2px solid #000;
+    padding: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
-.game-board {
-
+.header .details {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
 }
 
 .deck {
-
+    max-height: 90%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 10%));
+    gap: 1rem;
+    justify-content: center;
+    padding: 1rem;
+    padding-left: .2rem;
+    padding-right: .2rem;
 }
 
 .card {
+    width: 100%;
+    aspect-ratio: 1/1.8;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: .5rem;
+    border-radius: 1rem;
+    border-color: #000;
+    background-color: aquamarine;
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2);
+}
 
+/* card text */
+.card > div {
+    font-size: 1.5rem;
+    width: 100%;
+    text-align: center;
 }
 
 .card img {
-    max-width: 50px;
-    max-height: 50px;
+    max-width: 100%;
+    min-width: 50px;
+    aspect-ratio: 1/1;
+    border-radius: 1rem;
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2);
 }
 
 .footer {
+    border-top: 2px solid #000;
+    padding: .5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 10%;
+}
 
+.footer-inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+    gap: 1%;
+}
+
+.footer-inner svg {
+    align-items: center;
+    display: flex;
+}
+
+.game-over {
+    width: 100%;
+    height: 90%;
+    padding: 2rem;
+    display: flex;
+    justify-content: center;
+}
+
+.game-over-inner {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.game-over-inner button {
+    padding: .5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border-radius: .75rem;
+}
+
+button:hover {
+    transform: translateY(2px);
+    cursor: pointer;
 }
