--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,10 @@ html {
     font-family: Nunito, 'sans-serif';
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     height: 100vh;
     width: 100vw;
@@ -23,6 +27,10 @@ body {
 .game-board{
     width: 100vw;
     height: 100vh;
+    background: url(./images/wallpaper.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 .header {
@@ -34,6 +42,7 @@ body {
     padding: 1rem;
     padding-left: 2rem;
     padding-right: 2rem;
+    background: transparent;
 }
 
 .header .details {
@@ -63,8 +72,10 @@ body {
     padding: .5rem;
     border-radius: 1rem;
     border-color: #000;
-    background-color: aquamarine;
-    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2);
+    background-color: #556B2F;
+    transition: 100ms ease-out;
+    border-style: solid;
+    box-shadow: -2px -4px 0px 0px #0006 inset, 2px 2px 0px 0px #0008 inset;
 }
 
 /* card text */
@@ -83,7 +94,6 @@ body {
 }
 
 .footer {
-    border-top: 2px solid #000;
     padding: .5rem;
     padding-left: 2rem;
     padding-right: 2rem;
@@ -92,6 +102,8 @@ body {
     justify-content: center;
     align-items: center;
     max-height: 10%;
+    background-color: #383838;
+    color: rgb(220,220,220);
 }
 
 .footer-inner {
@@ -105,6 +117,7 @@ body {
 .footer-inner svg {
     align-items: center;
     display: flex;
+    fill: rgb(220,220,220);
 }
 
 .game-over {
@@ -128,6 +141,9 @@ body {
     padding-left: 1rem;
     padding-right: 1rem;
     border-radius: .75rem;
+    background-color: #556B2F;
+    border-style: solid;
+    border-color: #000;
 }
 
 button:hover {
